force-app/main/default/objects/Allegation__c/Allegation__c.object-meta.xml
<CustomObject>
    <description>Allegations of fraud for the WA Office of Fraud and Accountability</description>
    <label>Allegation</label>
    <nameField>
        <displayFormat>ALLEG-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Allegation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allegations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>