force-app/main/default/objects/Allegation__c/fields/Date_of_Allegation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Allegation__c</fullName>
    <label>Date of Allegation</label>
    <type>Date</type>
</CustomField>