force-app/main/default/objects/Allegation__c/fields/Disposition_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Indicator__c</fullName>
    <formula>IF(ISPICKVAL(Disposition__c , &quot;Substantiated&quot;) , IMAGE(&quot;/resource/AllegationDisposition/substantiated.png&quot;, &quot;Substantiated&quot;),

IF(ISPICKVAL(Disposition__c , &quot;Unsubstantiated&quot;) , IMAGE(&quot;/resource/AllegationDisposition/unsubstantiated.png&quot;, &quot;Unsubstantiated&quot;),

IF(ISPICKVAL(Disposition__c , &quot;Unfounded&quot;) , IMAGE(&quot;/resource/AllegationDisposition/unfounded.png&quot;, &quot;Unfounded&quot;),

IF(ISPICKVAL(Disposition__c, &quot;Null&quot;), null,null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disposition Indicator</label>
    <type>Text</type>
</CustomField>