force-app/main/default/objects/Allegation__c/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>IF(ISPICKVAL(Status__c , &quot;Open&quot;) , IMAGE(&quot;/resource/AllegationStatus/Open32.png&quot;, &quot;Open&quot;),

IF(ISPICKVAL(Status__c , &quot;Pending Approval&quot;) , IMAGE(&quot;/resource/AllegationStatus/Pending32.png&quot;, &quot;Pending Approval&quot;),

IF(ISPICKVAL(Status__c , &quot;Closed&quot;) , IMAGE(&quot;/resource/AllegationStatus/Closed32.png&quot;, &quot;Closed&quot;),

IF(ISPICKVAL(Status__c , &quot;Civil&quot;) , IMAGE(&quot;/resource/AllegationStatus/Civil32.png&quot;, &quot;Civil&quot;),

IF(ISPICKVAL(Status__c , &quot;Founded&quot;) , IMAGE(&quot;/resource/AllegationStatus/Founded32.png&quot;, &quot;Founded&quot;),

IF(ISPICKVAL(Status__c , &quot;Prosecuted&quot;) , IMAGE(&quot;/resource/AllegationStatus/Prosecuted32.png&quot;, &quot;Prosecuted&quot;),

IF(ISPICKVAL(Status__c , &quot;Unfounded&quot;) , IMAGE(&quot;/resource/AllegationStatus/Unfounded32.png&quot;, &quot;Unfounded&quot;),

IF(ISPICKVAL(Status__c, &quot;Null&quot;), null,null))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>