force-app/main/default/objects/Allegation__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub 1</fullName>
            </value>
            <value>
                <fullName>Sub 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>