force-app/main/default/objects/Allegation__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <inlineHelpText>Provide a narrative summary of the allegation</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>