force-app/main/default/objects/Allegation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failure to File Return</fullName>
            </value>
            <value>
                <fullName>Failure to Pay Tax</fullName>
            </value>
            <value>
                <fullName>Failure to Withhold Tax</fullName>
            </value>
            <value>
                <fullName>False/Altered Documents</fullName>
            </value>
            <value>
                <fullName>False Deductions</fullName>
            </value>
            <value>
                <fullName>False Exemption</fullName>
            </value>
            <value>
                <fullName>Kickback</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle</fullName>
            </value>
            <value>
                <fullName>Multiple Filing</fullName>
            </value>
            <value>
                <fullName>Narcotics Income</fullName>
            </value>
            <value>
                <fullName>Organized Crime</fullName>
            </value>
            <value>
                <fullName>Public/Political Corruption</fullName>
            </value>
            <value>
                <fullName>Unreported Assets</fullName>
            </value>
            <value>
                <fullName>Unreported Income</fullName>
            </value>
            <value>
                <fullName>Unsubstantiated Income</fullName>
            </value>
            <value>
                <fullName>Wagering/Gambling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>